deploy/api-www/ali-k8s-istio/ali-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-www
  labels:
    app: api-www
spec:
  type: NodePort #ClusterIP
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 7041
      targetPort: 7041
  selector:
    app: api-www
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-www-v1
  labels:
    app: api-www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-www
      version: v1
  template:
    metadata:
      labels:
        app: api-www
        version: v1
    spec:
      restartPolicy: Always
      containers:
        - name: api-www
          image: liam1803/s1-api-www:v1.0.0
          ports:
            - name: http
              containerPort: 7041
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-www
spec:
  hosts:
    - "mn-api-www.mygs.com" # temp
  gateways:
    - gateway-api/makeblock-gateway-api
  http:
    - route:
        - destination:
            host: api-www
            port:
              number: 7041
